# AudioRecorderLib

./: .gitignore  CMakeLists.txt  README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: audiocapture.cpp
src/main/cpp/audiorecord/: audiorecord.cpp  audiorecord.h
src/main/cpp/base/: jvm.cpp  jvm.h  log.h
src/main/cpp/include/: audiocapture.h  baserecord.h
src/main/cpp/opensles/: openslescore.cpp  openslescore.h  openslesrecord.cpp  openslesrecord.h
src/main/java/com/net168/audiorecord/: AudioCapture.java  BaseRecord.java  OnAudioCaptureCallback.java
src/main/java/com/net168/audiorecord/audiorecord/: AudioRecordCore.java  AudioRecordRecord.java
src/main/java/com/net168/audiorecord/opensles/: OpenSLESRecord.java
